Fixed responses and added a new handle
Fixed responses to provide user_id
Added a handle to get tasks for a specific user
